src/maven/snapshots/verver__maven__version__version_tests__tokenization-3.snap
---
source: src/maven/version_tests.rs
expression: "get_tokens(\"m1\")"
---
- prefix: Hyphen
  value:
    Qualifier: milestone
- prefix: Hyphen
  value:
    Number: 1

