src/maven/snapshots/verver__maven__version__version_tests__tokenization-4.snap
---
source: src/maven/version_tests.rs
expression: "get_tokens(\"1m\")"
---
- prefix: Hyphen
  value:
    Number: 1
- prefix: Hyphen
  value:
    Qualifier: m

