src/maven/snapshots/verver__maven__version__version_tests__tokenization-5.snap
---
source: src/maven/version_tests.rs
expression: "get_tokens(\"0m0\")"
---
- prefix: Hyphen
  value:
    Qualifier: milestone

