src/maven/snapshots/verver__maven__version__version_tests__tokenization.snap
---
source: src/maven/version_tests.rs
expression: "get_tokens(\"1.2.3\")"
---
- prefix: Hyphen
  value:
    Number: 1
- prefix: Dot
  value:
    Number: 2
- prefix: Dot
  value:
    Number: 3

